force-app/main/default/objects/Work_Request__c/Work_Request__c.object-meta.xml
<CustomObject>
    <description>Object to capture requests for additional Work Orders and/or Service Appointments to be monitored by the Project Coordinator. #28077</description>
    <label>Work Request</label>
    <nameField>
        <displayFormat>WR-{00000000}</displayFormat>
        <label>Work Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>