force-app/main/default/objects/Work_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>28077</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>