force-app/main/default/objects/Work_Request__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>28077</description>
    <inlineHelpText>Date by which the work needs to be completed</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>