force-app/main/default/objects/Work_Request__c/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>28077</description>
    <formula>Work_Order__r.Formatted_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Address from related Work Order</inlineHelpText>
    <label>Formatted Address</label>
    <type>Text</type>
</CustomField>