force-app/main/default/objects/Work_Request__c/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <description>28077</description>
    <label>Other Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>