force-app/main/default/objects/Work_Request__c/fields/Requested_Resource__c.field-meta.xml
<CustomField>
    <fullName>Requested_Resource__c</fullName>
    <description>28077</description>
    <inlineHelpText>The Requested Resource field is captured at the time of creation and entered by the Requestor</inlineHelpText>
    <label>Requested Resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>