force-app/main/default/objects/Work_Request__c/fields/Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date__c</fullName>
    <description>28077</description>
    <inlineHelpText>Date/Time value that the work should begin</inlineHelpText>
    <label>Requested Start Date</label>
    <type>DateTime</type>
</CustomField>