force-app/main/default/objects/Work_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>28077</description>
    <inlineHelpText>Type of Work selected by the mobile user as a more granular category of the Work Type selected</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Work</valueSetName>
    </valueSet>
</CustomField>