force-app/main/default/objects/Work_Request__c/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <description>28077</description>
    <formula>IF(TEXT( Type__c )=&apos;Other&apos;, Other_Type__c ,TEXT( Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Type value selected including any Other Type description</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>