force-app/main/default/objects/Work_Request__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <description>28077</description>
    <inlineHelpText>Work Order from which the request was generated</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Requests</relationshipLabel>
    <relationshipName>Work_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>