force-app/main/default/objects/Work_Request__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Requests</relationshipLabel>
    <relationshipName>Work_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>