force-app/main/default/objects/Work_Request__c/validationRules/ISBLANK_OTHER_TYPE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_OTHER_TYPE</fullName>
    <active>true</active>
    <description>28077 Work Request Other Type field is required with the Type is Other</description>
    <errorConditionFormula>AND(
ISBLANK( Other_Type__c ),
TEXT( Type__c )=&apos;Other&apos;)</errorConditionFormula>
    <errorMessage>Work Request Other Type field is required with the Type is Other</errorMessage>
</ValidationRule>