force-app/main/default/objects/Work_Request__c/validationRules/ISBLANK_REJECTION_REASON.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_REJECTION_REASON</fullName>
    <active>true</active>
    <description>28077 Work Request Rejection Reason is required when Status is Rejected</description>
    <errorConditionFormula>AND(
ISBLANK(  Rejection_Reason__c  ),
TEXT(  Status__c  )=&apos;Rejected&apos;)</errorConditionFormula>
    <errorMessage>Work Request Rejection Reason is required when Status is Rejected</errorMessage>
</ValidationRule>