force-app/main/default/objects/Work_Request__c/validationRules/ISBLANK_STATUS.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_STATUS</fullName>
    <active>true</active>
    <description>28077</description>
    <errorConditionFormula>TEXT( Status__c )=&apos;&apos;</errorConditionFormula>
    <errorMessage>Work Request Status cannot be blank</errorMessage>
</ValidationRule>