force-app/main/default/objects/Work_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Formatted_Address__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Type_Formula__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>