force-app/main/default/objects/Work_Request__c/listViews/Pending_Review.listView-meta.xml
<ListView>
    <fullName>Pending_Review</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Formatted_Address__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Type_Formula__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>Pending Review</label>
</ListView>